--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="site-header">
-  <h1>Untitled</h1>
+  <h1>Random Thoughts</h1>
   <nav>
     <a class="nav-anchor" href="/">Home</a>
     <a class="nav-anchor" href="/">Posts</a>
