--- a/_sass/06_components/blog-post.scss
+++ b/_sass/06_components/blog-post.scss
@@ -33,6 +33,15 @@
   }
 
   main {
+    figure {
+      img {
+        width: 100%;
+      }
+    }
+    h2 {
+      font-family: $font-family-regular;
+      font-weight: 600;
+    }
     p {
       font-size: 20px;
       line-height: 2em;
