Safari font fix, layout adjustment

--- a/_sass/06_components/blog-post.scss
+++ b/_sass/06_components/blog-post.scss
@@ -6,8 +6,8 @@
     padding-bottom: 1em;
     h2 {
       font-family: $font-family-headline;
+      font-style: italic;
       font-size: calc(16px + 3vw);
-      font-weight: 600;
       line-height: 1.2em;
       margin: 0;
     }
