--- a/_sass/01_settings/tokens.scss
+++ b/_sass/01_settings/tokens.scss
@@ -54,7 +54,7 @@ $font-family-regular: $font-family;
 $font-family-light: 'Helvetica Light', Arial, sans-serif;
 $font-family-medium: 'Helvetica ', Arial, sans-serif;
 $font-family-bold: Helvetica, sans-serif;
-$font-family-headline: 'Playfair Display', serif;
+$font-family-headline: "Playfair Display", serif;
 $font-family-monospace: monospace;
 $font-weight-regular: 400;
 $font-weight-bold: 400;
