--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,6 @@
   <h1>Random Thoughts</h1>
   <nav>
     <a class="nav-anchor" href="/">Home</a>
-    <a class="nav-anchor" href="/">Posts</a>
+    <a class="nav-anchor" href="/posts">Posts</a>
   </nav>
 </header>
