--- a/_sass/06_components/post-listing.scss
+++ b/_sass/06_components/post-listing.scss
@@ -2,3 +2,30 @@
   max-width: 1000px;
   margin: 8em auto;
 }
+
+.post-navigation {
+  display: flex;
+  margin-top: 6em;
+  justify-content: space-between;
+  a {
+    display: block;
+    cursor: pointer;
+    font-weight: 600;
+    text-align: center;
+    text-decoration: none;
+    transition: all .2s ease;
+    padding: 1em 2em;
+    font-size: 1.25em;
+    label {
+      font-size: 0.8em;
+      margin: 0;
+      cursor: pointer;
+    }
+    span {
+      cursor: pointer;
+    }
+    &:hover {
+      background: #eee;
+    }
+  }
+}
