--- a/css/main.scss
+++ b/css/main.scss
@@ -18,5 +18,6 @@
 
   "06_components/header",
   "06_components/blog-post",
-  "06_components/post-listing"
+  "06_components/post-listing",
+  "06_components/post-index"
 ;
