--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="blog-post" itemscope itemtype="http://schema.org/BlogPosting">
   <header>
     <h2>{{ page.title }}</h2>
-    <h3>{{ page.date | date: "%B %-d, %Y" }}</h3>
+    <h3 class="blog-post-date">{{ page.date | date: "%B %-d, %Y" }}</h3>
     <div class="feelings">
       {% for tag in page.tags %}
         <span>{{ tag }}</span>
