--- a/_sass/01_settings/tokens.scss
+++ b/_sass/01_settings/tokens.scss
@@ -1,6 +1,6 @@
 // Colors
 
-$color-background: #fbf9f5;
+$color-background: #ffffff;
 
 $color-primary: #00a5f1;
 $color-primary-dark: darken($color-primary, 30%);
@@ -49,12 +49,12 @@ $color-shadow: #EFEFEF;
 
 // Fonts
 
-$font-family: 'Source Sans Pro', 'Helvetica', Arial, sans-serif;
+$font-family: 'Crimson Text', 'Helvetica', Arial, sans-serif;
 $font-family-regular: $font-family;
 $font-family-light: 'Helvetica Light', Arial, sans-serif;
-$font-family-medium: 'Helvetica ', Arial, sans-serif;
-$font-family-bold: Helvetica, sans-serif;
-$font-family-headline: "Playfair Display", serif;
+$font-family-medium: "Crimson Text", 'Helvetica ', Arial, sans-serif;
+$font-family-bold: "Crimson Text", Helvetica, sans-serif;
+$font-family-headline: "Freeman", sans-serif;
 $font-family-monospace: monospace;
 $font-weight-regular: 400;
 $font-weight-bold: 400;
@@ -72,7 +72,7 @@ $font-size-heading-xxx-large: 10rem;
 
 $font-size-text-xx-small: .625rem;
 $font-size-text-x-small: .625rem;
-$font-size-text-small: .7rem;
+$font-size-text-small: .9rem;
 $font-size-text-medium: 1rem;
 $font-size-text-large: 1.1rem;
 $font-size-text-x-large: 1.05rem;
