--- a/_sass/06_components/blog-post.scss
+++ b/_sass/06_components/blog-post.scss
@@ -1,33 +1,35 @@
 .blog-post {
+  border-bottom: 1px solid #ff827c;
   margin-bottom: 6em;
   padding: 2em;
+  transition: .2s ease;
+  h2, h3, h4, h5 {
+    color: rgba(0,0,0,0.8);
+  }
   header {
     border-bottom: 1px solid #bbb;
-    padding-bottom: 1em;
+    padding: 0 1rem 2rem 1rem;
     h2 {
+      font-size: 36px;
       font-family: $font-family-headline;
-      font-style: italic;
-      font-size: calc(16px + 3vw);
+      font-weight: 800;
       line-height: 1.2em;
       margin: 0;
     }
-    h3 {
+    .blog-post-date {
       font-family: $font-family-regular;
-      color: #5F83AD;
-      font-size: 1em;
       line-height: 1.75em;
       margin: 0 0 1em 0;
     }
     .feelings {
       span {
-        padding: 3px 10px 4px 10px;
-        color: #797f5a;
+        background: #FFC857;
+        border-radius: 22px;
+        display: inline-block;
+        font-size: .9em;
         line-height: 1em;
         margin-right: 1em;
-        background: #E0E2D6;
-        display: inline-block;
-        border-radius: 22px;
-        font-size: .8em;
+        padding: 3px 10px 4px 10px;
       }
     }
   }
@@ -39,20 +41,69 @@
       }
     }
     h2 {
-      font-family: $font-family-regular;
-      font-weight: 600;
+      font-family: $font-family-headline;
+      font-size: $font-size-heading-medium;
+    }
+    h3 {
+      font-size: $font-size-heading-small;
+      font-style: italic;
     }
     p {
+      color: rgba(0,0,0,0.8);
+      line-height: 1.8;
       font-size: 20px;
-      line-height: 2em;
-      text-indent: 1.5em;
       margin-bottom: 2em;
+      -webkit-font-smoothing: antialiased;
+    }
+
+    p.has-drop-cap:not(:focus):first-letter {
+      color: #ff827c;
+      display: block;
+      float: left;
+      font-size: 78px;
+      font-style: normal;
+      font-weight: 700;
+      letter-spacing: -.03em;
+      line-height: .93;
+      margin-left: -5px;
+      margin-right: 7px;
+      padding-top: 8px;
+      position: relative;
+    }
+    quote {
+      color: rgba(0,0,0,0.8);
+      border-top: 1px solid black;
+      border-bottom: 1px solid black;
+      display: block;
+      font-size: 28px;
+      font-style: italic;
+      padding: 0.5em;
     }
   }
 
-  @include media(600px) {
+  @include media(800px) {
+    padding: 0 0 2em 0;
+    header {
+      h2 {
+        font-size: 54px;
+      }
+    }
     main {
-      padding: 3em 0 0 20%;
+      h2 {
+        font-size: $font-size-heading-large;
+        padding-left: 1rem;
+      }
+      h3 {
+        font-size: $font-size-heading-medium;
+        padding-left: 1rem;
+      }
+      p {
+        padding: 0 1rem;
+        font-size: 23px;
+      }
+      quote {
+        font-size: 36px;
+      }
     }
   }
 }
