changing gears, jeep site

--- a/_sass/03_generic/normalize.scss
+++ b/_sass/03_generic/normalize.scss
@@ -10,6 +10,7 @@
  */
 
 html {
+  background: #111111;
   box-sizing: border-box;
   line-height: 1.15; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
