--- a/css/main.scss
+++ b/css/main.scss
@@ -17,7 +17,6 @@
   "04_elements/typography",
 
   "06_components/header",
-  "06_components/blog-post",
-  "06_components/post-listing",
-  "06_components/post-index"
+  "06_components/index",
+  "06_components/jeep"
 ;
