--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="site-header">
-  <h1>Random Thoughts</h1>
+  <h1>Jeep Love</h1>
+  {% include content/grill.svg %}
   <nav>
     <a class="nav-anchor" href="/">Home</a>
-    <a class="nav-anchor" href="/posts">Posts</a>
   </nav>
 </header>
