--- a/_sass/01_settings/tokens.scss
+++ b/_sass/01_settings/tokens.scss
@@ -49,12 +49,12 @@ $color-shadow: #EFEFEF;
 
 // Fonts
 
-$font-family: 'Crimson Text', 'Helvetica', Arial, sans-serif;
+$font-family: 'Open Sans', 'Helvetica', Arial, sans-serif;
 $font-family-regular: $font-family;
 $font-family-light: 'Helvetica Light', Arial, sans-serif;
-$font-family-medium: "Crimson Text", 'Helvetica ', Arial, sans-serif;
-$font-family-bold: "Crimson Text", Helvetica, sans-serif;
-$font-family-headline: "Freeman", sans-serif;
+$font-family-medium: "Open Sans", 'Helvetica ', Arial, sans-serif;
+$font-family-bold: "Open Sans", Helvetica, sans-serif;
+$font-family-headline: "Open Sans", sans-serif;
 $font-family-monospace: monospace;
 $font-weight-regular: 400;
 $font-weight-bold: 400;
