Content updates and design exploration

--- a/_includes/jeep-data/1998.html
+++ b/_includes/jeep-data/1998.html
@@ -1,15 +1,47 @@
+{% include shared_close_button.html %}
+
 <div class="jeep-container">
   <section class="paint-chips">
-    <span class="black">X8</span>
-    <span class="bright-jade">QP</span>
-    <span class="chili-pepper-red new">EA</span>
-    <span class="deep-amethyst new">CN</span>
-    <span class="emerald-green">GF</span>
-    <span class="flame-red">R4</span>
-    <span class="gunmetal">Q7</span>
-    <span class="lapis-blue">C4</span>
-    <span class="moss-green">JN</span>
-    <span class="stone-white dark-text">W1</span>
+    <section>
+      <span class="black"></span>
+      <p>X8 - Black</p>
+    </section>
+    <section>
+      <span class="bright-jade"></span>
+      <p>QP - Bright Jade</p>
+    </section>
+    <section>
+      <span class="chili-pepper-red new"></span>
+      <p>EA - Chili Pepper Red</p>
+    </section>
+    <section>
+      <span class="deep-amethyst new"></span>
+      <p>CN - Deep Amethyst</p>
+    </section>
+    <section>
+      <span class="emerald-green"></span>
+      <p>FG - Emerald Green</p>
+    </section>
+    <section>
+      <span class="flame-red"></span>
+      <p>R4 - Flame Red</p>
+    </section>
+    <section>
+      <span class="gunmetal"></span>
+      <p>Q7 - Gunmetal</p>
+    </section>
+    <section>
+      <span class="lapis-blue"></span>
+      <p>C4 - Lapis Blue</p>
+    </section>
+    <section>
+      <span class="moss-green"></span>
+      <p>JN - Moss Green</p>
+    </section>
+    <section>
+      <span class="stone-white"></span>
+      <p>W1 - Stone White</p>
+    </section>
   </section>
 
   <table>
