--- a/_includes/jeep-data/1999.html
+++ b/_includes/jeep-data/1999.html
@@ -1,15 +1,47 @@
+{% include shared_close_button.html %}
+
 <div class="jeep-container">
   <section class="paint-chips">
-    <span class="black">X8</span>
-    <span class="chili-pepper-red">EA</span>
-    <span class="deep-amethyst">CN</span>
-    <span class="desert-sand new">TD</span>
-    <span class="flame-red">R4</span>
-    <span class="forest-green new">G8</span>
-    <span class="gunmetal">Q7</span>
-    <span class="intense-blue new">B3</span>
-    <span class="medium-fern-green new">JP</span>
-    <span class="stone-white dark-text">W1</span>
+    <section>
+      <span class="black"></span>
+      <p>X8 - Black</p>
+    </section>
+    <section>
+      <span class="chili-pepper-red"></span>
+      <p>EA - Chili Pepper Red</p>
+    </section>
+    <section>
+      <span class="deep-amethyst"></span>
+      <p>CN - Deep Amethyst</p>
+    </section>
+    <section>
+      <span class="desert-sand new"></span>
+      <p>TD - Desert Sand</p>
+    </section>
+    <section>
+      <span class="forest-green new"></span>
+      <p>G8 - Forest Green</p>
+    </section>
+    <section>
+      <span class="flame-red"></span>
+      <p>R4 - Flame Red</p>
+    </section>
+    <section>
+      <span class="gunmetal"></span>
+      <p>Q7 - Gunmetal</p>
+    </section>
+    <section>
+      <span class="intense-blue new"></span>
+      <p>B3 - Intense Blue</p>
+    </section>
+    <section>
+      <span class="medium-fern-green new"></span>
+      <p>JP - Medium Fern Green</p>
+    </section>
+    <section>
+      <span class="stone-white"></span>
+      <p>W1 - Stone White</p>
+    </section>
   </section>
 
   <table>
