--- a/_includes/jeep-data/2000.html
+++ b/_includes/jeep-data/2000.html
@@ -1,14 +1,47 @@
+{% include shared_close_button.html %}
+
 <div class="jeep-container">
   <section class="paint-chips">
-    <span class="amber-fire">V3</span>
-    <span class="black">X8</span>
-    <span class="flame-red">R4</span>
-    <span class="forest-green">G8</span>
-    <span class="medium-fern-green">JP</span>
-    <span class="patriot-blue new">BT</span>
-    <span class="silverstone new">S5</span>
-    <span class="solar-yellow new">YH</span>
-    <span class="stone-white dark-text">W1</span>
+    <section>
+      <span class="amber-fire new"></span>
+      <p>R4 - Amber Fire</p>
+    </section>
+    <section>
+      <span class="black"></span>
+      <p>X8 - Black</p>
+    </section>
+    <section>
+      <span class="flame-red"></span>
+      <p>R4 - Flame Red</p>
+    </section>
+    <section>
+      <span class="forest-green"></span>
+      <p>G8 - Forest Green</p>
+    </section>
+    <section>
+      <span class="desert-sand"></span>
+      <p>S5 - Desert Sand</p>
+    </section>
+    <section>
+      <span class="medium-fern-green"></span>
+      <p>JP - Medium Fern Green</p>
+    </section>
+    <section>
+      <span class="patriot-blue new"></span>
+      <p>BT - Patriot Blue</p>
+    </section>
+    <section>
+      <span class="silverstone new"></span>
+      <p>S5 - Silverstone</p>
+    </section>
+    <section>
+      <span class="solar-yellow new"></span>
+      <p>YH - Solar Yellow</p>
+    </section>
+    <section>
+      <span class="stone-white"></span>
+      <p>W1 - Stone White</p>
+    </section>
   </section>
 
   <table>
