--- a/_includes/jeep-data/2001.html
+++ b/_includes/jeep-data/2001.html
@@ -1,15 +1,47 @@
+{% include shared_close_button.html %}
+
 <div class="jeep-container">
   <section class="paint-chips">
-    <span class="amber-fire new">V3</span>
-    <span class="black">X8</span>
-    <span class="flame-red">R4</span>
-    <span class="forest-green">G8</span>
-    <span class="patriot-blue">BT</span>
-    <span class="sienna-pearl new">U7</span>
-    <span class="silverstone">S5</span>
-    <span class="solar-yellow">YH</span>
-    <span class="steel-blue new">BQ</span>
-    <span class="stone-white dark-text">W1</span>
+    <section>
+      <span class="amber-fire"></span>
+      <p>R4 - Amber Fire</p>
+    </section>
+    <section>
+      <span class="black"></span>
+      <p>X8 - Black</p>
+    </section>
+    <section>
+      <span class="flame-red"></span>
+      <p>R4 - Flame Red</p>
+    </section>
+    <section>
+      <span class="forest-green"></span>
+      <p>G8 - Forest Green</p>
+    </section>
+    <section>
+      <span class="patriot-blue"></span>
+      <p>BT - Patriot Blue</p>
+    </section>
+    <section>
+      <span class="sienna-pearl new"></span>
+      <p>U7 - Sienna Pearl</p>
+    </section>
+    <section>
+      <span class="silverstone"></span>
+      <p>S5 - Silverstone</p>
+    </section>
+    <section>
+      <span class="solar-yellow"></span>
+      <p>YH - Solar Yellow</p>
+    </section>
+    <section>
+      <span class="steel-blue new"></span>
+      <p>BQ - Steel Blue</p>
+    </section>
+    <section>
+      <span class="stone-white"></span>
+      <p>W1 - Stone White</p>
+    </section>
   </section>
 
   <table>
