--- a/_includes/jeep-data/2002.html
+++ b/_includes/jeep-data/2002.html
@@ -1,22 +1,87 @@
+{% include shared_close_button.html %}
+
+
 <div class="jeep-container">
+  <section class="documentation">
+    <h3>Brochures</h3>
+    <div class="brochures">
+      <a href="/documents/tj-brochure-2002.pdf" class="brochure" target="blank">
+        <span class="brochure-02"></span>
+        2002 Wrangler Sales Brochure
+      </a>
+    </div >
+  </section>
+
+  <h3>Paint Options</h3>
   <section class="paint-chips">
-    <span class="amber-fire">V3</span>
-    <span class="black">X8</span>
-    <span class="bright-silver">S2</span>
-    <span class="deep-cranberry">MT</span>
-    <span class="deep-slate">AW</span>
-    <span class="flame-red">R4</span>
-    <span class="inca-gold">Y6</span>
-    <span class="inferno-red">EL</span>
-    <span class="light-almond">KJ</span>
-    <span class="patriot-blue">BT</span>
-    <span class="shale-green new">GR</span>
-    <span class="sienna-pearl">U7</span>
-    <span class="silverstone">S5</span>
-    <span class="solar-yellow">YH</span>
-    <span class="steel-blue">BQ</span>
-    <span class="stone-white dark-text">W1</span>
-    <span class="taupe-frost">TK</span>
+    <section>
+      <span class="amber-fire"></span>
+      <p>R4 - Amber Fire</p>
+    </section>
+    <section>
+      <span class="black"></span>
+      <p>X8 - Black</p>
+    </section>
+    <section>
+      <span class="bright-silver"></span>
+      <p>S2 - Bright Silver</p>
+    </section>
+    <section>
+      <span class="deep-cranberry"></span>
+      <p>MT - Deep Cranberry</p>
+    </section>
+    <section>
+      <span class="deep-slate"></span>
+      <p>AW - Deep Slate</p>
+    </section>
+    <section>
+      <span class="flame-red"></span>
+      <p>R4 - Flame Red</p>
+    </section>
+    <section>
+      <span class="inca-gold"></span>
+      <p>Y6 - Inca Gold</p>
+    </section>
+    <section>
+      <span class="inferno-red"></span>
+      <p>EL - Inferno Red</p>
+    </section>
+    <section>
+      <span class="light-almond"></span>
+      <p>KJ - Light Almond</p>
+    </section>
+    <section>
+      <span class="patriot-blue"></span>
+      <p>BT - Patriot Blue</p>
+    </section>
+    <section>
+      <span class="shale-green new"></span>
+      <p>GR - Shale Green</p>
+    </section>
+    <section>
+      <span class="sienna-pearl"></span>
+      <p>U7 - Sienna Pearl</p>
+    </section>
+    <section>
+      <span class="silverstone"></span>
+      <p>S5 - Silverstone</p>
+    </section>
+    <section>
+      <span class="solar-yellow"></span>
+      <p>YH - Solar Yellow</p>
+    </section>
+    <section>
+      <span class="steel-blue"></span>
+      <p>BQ - Steel Blue</p>
+    </section>
+    <section>
+      <span class="stone-white"></span>
+      <p>W1 - Stone White</p>
+    </section>
+    <section>
+      <span class="taupe-frost"></span>
+      <p>TK - Taupe Frost</p>
+    </section>
   </section>
 
   <table>
