--- a/_includes/jeep-data/2003.html
+++ b/_includes/jeep-data/2003.html
@@ -1,15 +1,47 @@
+{% include shared_close_button.html %}
+
 <div class="jeep-container">
   <section class="paint-chips">
-    <span class="black">X8</span>
-    <span class="bright-silver new">S2</span>
-    <span class="flame-red">R4</span>
-    <span class="inca-gold new">Y6</span>
-    <span class="intense-blue new">B3</span>
-    <span class="light-khaki new">JC</span>
-    <span class="patriot-blue">BT</span>
-    <span class="shale-green">GR</span>
-    <span class="sienna-pearl">U7</span>
-    <span class="stone-white dark-text">W1</span>
+    <section>
+      <span class="black"></span>
+      <p>X8 - Black</p>
+    </section>
+    <section>
+      <span class="bright-silver new"></span>
+      <p>S2 - Bright Silver</p>
+    </section>
+    <section>
+      <span class="flame-red"></span>
+      <p>R4 - Flame Red</p>
+    </section>
+    <section>
+      <span class="inca-gold new"></span>
+      <p>Y6 - Inca Gold</p>
+    </section>
+    <section>
+      <span class="intense-blue new"></span>
+      <p>B3 - Intense Blue</p>
+    </section>
+    <section>
+      <span class="light-khaki new"></span>
+      <p>JC - Light Khaki</p>
+    </section>
+    <section>
+      <span class="patriot-blue"></span>
+      <p>BT - Patriot Blue</p>
+    </section>
+    <section>
+      <span class="shale-green"></span>
+      <p>GR - Shale Green</p>
+    </section>
+    <section>
+      <span class="sienna-pearl"></span>
+      <p>U7 - Sienna Pearl</p>
+    </section>
+    <section>
+      <span class="stone-white"></span>
+      <p>W1 - Stone White</p>
+    </section>
   </section>
 
   <table>
