--- a/_includes/jeep-data/2005.html
+++ b/_includes/jeep-data/2005.html
@@ -1,15 +1,47 @@
+{% include shared_close_button.html %}
+
 <div class="jeep-container">
   <section class="paint-chips">
-    <span class="black">X8</span>
-    <span class="deep-beryl-green new">GV</span>
-    <span class="electric-lime-green">GL</span>
-    <span class="flame-red">R4</span>
-    <span class="impact-orange new">V5</span>
-    <span class="light-khaki">JC</span>
-    <span class="patriot-blue">BT</span>
-    <span class="shale-green">GR</span>
-    <span class="solar-yellow">YH</span>
-    <span class="stone-white dark-text">W1</span>
+    <section>
+      <span class="black"></span>
+      <p>X8 - Black</p>
+    </section>
+    <section>
+      <span class="deep-beryl-green new"></span>
+      <p>GV - Deep Beryl Green</p>
+    </section>
+    <section>
+      <span class="electric-lime-green"></span>
+      <p>GL - Electric Lime Green</p>
+    </section>
+    <section>
+      <span class="flame-red"></span>
+      <p>R4 - Flame Red</p>
+    </section>
+    <section>
+      <span class="impact-orange new"></span>
+      <p>V5 - Impact Orange</p>
+    </section>
+    <section>
+      <span class="light-khaki"></span>
+      <p>JC - Light Khaki</p>
+    </section>
+    <section>
+      <span class="patriot-blue"></span>
+      <p>BT - Patriot Blue</p>
+    </section>
+    <section>
+      <span class="shale-green"></span>
+      <p>GR - Shale Green</p>
+    </section>
+    <section>
+      <span class="solar-yellow"></span>
+      <p>YH - Solar Yellow</p>
+    </section>
+    <section>
+      <span class="stone-white"></span>
+      <p>W1 - Stone White</p>
+    </section>
   </section>
 
   <table>
