responsive grids, added brochures

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <header id="site-header">
-  <h1>Jeep Love</h1>
-  {% include content/grill.svg %}
+  <h1>Wrangler TJ Info</h1>
+  <section>
+    {% include content/grill.svg %}
+  </section>
   <nav>
     <a class="nav-anchor" href="/">Home</a>
   </nav>
