--- a/_includes/jeep-data/2004.html
+++ b/_includes/jeep-data/2004.html
@@ -1,6 +1,16 @@
 {% include shared_close_button.html %}
 
 <div class="jeep-container">
+  <section class="documentation">
+    <h3>Brochures</h3>
+    <div class="brochures">
+      <a href="/documents/tj-brochure-2004.pdf" class="brochure" target="blank">
+        <span class="brochure-04"></span>
+        2004 Wrangler Sales Brochure
+      </a>
+    </div >
+  </section>
+
   <section class="paint-chips">
     <section>
       <span class="black"></span>
