--- a/_sass/06_components/header.scss
+++ b/_sass/06_components/header.scss
@@ -3,8 +3,8 @@
   background: black;
   color: white;
   border-bottom: 2px solid #D8B33E;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   padding: $spacing-medium;
   width: 100%;
 
@@ -16,17 +16,23 @@
 
   svg {
     fill: white;
+    display: block;
+    margin: 0 auto;
     width: 6em;
   }
 
+  nav {
+    text-align: right;
+  }
+
   a {
+    border-radius: 4px;
     color: white;
     font-size: $font-size-text-small;
     font-weight: 400;
     padding: 0.5em 1em;
     text-decoration: none;
     transition: all .5s ease;
-    border-radius: 4px;
     &:hover {
       background: #eeeeee;
       color: #2b2b2b;
