--- a/_includes/jeep-data/1997.html
+++ b/_includes/jeep-data/1997.html
@@ -1,6 +1,16 @@
 {% include shared_close_button.html %}
 
 <div class="jeep-container">
+  <section class="documentation">
+    <h3>Brochures</h3>
+    <div class="brochures">
+      <a href="/documents/jeep-all-models-1997.pdf" class="brochure" target="blank">
+        <span class="brochure-full-97"></span>
+        1997 Jeep Sales Brochure
+      </a>
+    </div >
+  </section>
+
   <section class="paint-chips">
     <section>
       <span class="black"></span>
@@ -44,6 +54,7 @@
     </section>
   </section>
 
+  <h3>Toledo Production Numbers</h3>
   <table>
     <thead>
       <tr>
