--- a/_includes/jeep-data/2001.html
+++ b/_includes/jeep-data/2001.html
@@ -1,6 +1,16 @@
 {% include shared_close_button.html %}
 
 <div class="jeep-container">
+  <section class="documentation">
+    <h3>Brochures</h3>
+    <div class="brochures">
+      <a href="/documents/jeep-all-models-2001.pdf" class="brochure" target="blank">
+        <span class="brochure-full-01"></span>
+        2001 Jeep Sales Brochure
+      </a>
+    </div >
+  </section>
+
   <section class="paint-chips">
     <section>
       <span class="amber-fire"></span>
