--- a/_sass/06_components/paint.scss
+++ b/_sass/06_components/paint.scss
@@ -37,15 +37,23 @@
       color: white;
       content: "new";
       font-size: $font-size-text-x-small;
+      padding: 0.5em 1em;
       position: absolute;
-      width: 3.25em;
-      height: 3.25em;
-      transform: rotate(30deg);
-      border-radius: 50%;
-      padding-top: .9em;
-      padding-left: .65em;
-      top: -10px;
-      right: -10px;
+      right: 0;
+    }
+  }
+
+  .discontinued {
+    position: relative;
+    opacity: 0.15;
+    &:after {
+      background: white;
+      content: "discontinued";
+      font-size: $font-size-text-x-small;
+      padding: 0.5em 1em;
+      position: absolute;
+      right: 0;
+      bottom: 0;
     }
   }
 
